--- a/Client/main/src/components/Landinpage/Dashboard.module.css
+++ b/Client/main/src/components/Landinpage/Dashboard.module.css
@@ -40,9 +40,9 @@
 .nav__cont > a:hover {
   color: #0466c8bb;
 }
-.nav__cont > a > button {
+/* .nav__cont > a > button {
   border-radius: 10px;
-  background-color: #0466c8;
+   background-color: #0466c8;
   border: none;
   outline: none;
   box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
@@ -50,10 +50,17 @@
   height: 35px;
   color: #fff;
   font-weight: 700;
-}
-.nav__cont > a > button:hover {
+} */
+/* .nav__cont > a > button:hover {
   background-color: #0466c8c4;
+} */
+
+.nav__cont > a > button {
+  border: none;
+  outline: none;
+  background-color: #fff;
 }
+
 .nav__career_cont {
   width: 80%;
   margin: auto;
@@ -207,6 +214,7 @@
   width: 100%;
   height: 40px;
   background-color: #0466c8;
+  /* background-color: black; */
   display: flex;
   align-items: center;
   justify-content: space-around;
