--- a/Client/main/src/components/Landinpage/Dashboard.module.css
+++ b/Client/main/src/components/Landinpage/Dashboard.module.css
@@ -99,8 +99,8 @@
 }
 .nav__discover_cont {
   display: flex;
-  width: 70%;
-  min-height: 180px;
+  width: 50%;
+  min-height: 170px;
   align-items: center;
   gap: 2rem;
   flex-wrap: wrap;
@@ -108,9 +108,10 @@
   justify-content: center;
   background-color: rgba(211, 211, 211, 0.316);
   margin-bottom: 60px;
+  padding: 10px;
 }
 .nav__discover_cont div {
-  height: 150px;
+  height: 130px;
   width: 180px;
   display: flex;
   justify-content: center;
@@ -231,4 +232,17 @@
 }
 .nav__black {
   color: black;
+}
+.footer__icons {
+  display: flex;
+  align-items: center;
+}
+
+.go__up {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.go__up img {
+  width: 50px;
 }
