--- a/Client/main/src/components/Landinpage/Modal.module.css
+++ b/Client/main/src/components/Landinpage/Modal.module.css
@@ -17,11 +17,12 @@
   background-color: #fff;
   display: flex;
   align-items: center;
-  gap: 5px;
+  justify-content: center;
+  gap: 10px;
 }
 .modal__profile > img {
   width: 60px;
-  height: 60px;
+  height: 50px;
   border-radius: 50%;
 }
 .modal__google_btn {
