--- a/Client/main/src/components/Landinpage/Dashboard.module.css
+++ b/Client/main/src/components/Landinpage/Dashboard.module.css
@@ -129,9 +129,9 @@
 }
 
 .nav__discover_cont div:hover {
-  background-color: #0466c8;
+  background-color: #0466c848;
   color: #fff;
-  transform: scale(1.1);
+  transform: scale(1.3);
 }
 .nav__steps {
   display: flex;
@@ -190,60 +190,18 @@
   border: none;
 }
 
-/* Footer section */
-.nav__footer {
-  width: 100%;
-  min-height: 100px;
-  background-color: #0466c8;
-  margin-top: 30px;
-  display: flex;
-  gap: 5px;
-  justify-content: center;
-  align-items: center;
-  color: #fff;
-}
-.nav__footer > div {
-  width: 25%;
-  min-height: 90px;
-  display: flex;
-  flex-direction: column;
-  /* justify-content:center; */
-  align-items: center;
-  line-height: 5px;
-}
-.nav__contact {
-  margin-top: 1px;
-  width: 100%;
-  height: 40px;
-  background-color: #0466c8;
-  /* background-color: black; */
-  display: flex;
-  align-items: center;
-  justify-content: space-around;
-  color: #fff;
-}
-.nav__contact > div {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  gap: 10px;
-}
-.nav__contact p {
-  font-size: 12px;
-}
-.nav__black {
+/* Course card */
+.CourseCard__text p {
   color: black;
 }
-.footer__icons {
-  display: flex;
-  align-items: center;
+.CourseCard__text p:hover {
+  color: #fff;
 }
 
-.go__up {
-  display: flex;
-  align-items: center;
-  justify-content: center;
+.CourseCard__link a {
+  text-decoration: none;
 }
-.go__up img {
-  width: 50px;
-}
+
+/* .CourseCard__link :hover {
+  color: #fff;
+} */
